[package]
authors = ["aceeri <conmcclusk@gmail.com>"]
categories = ["network-programming", "game-development"]
description = "A client-server networking architecture for bevy."
edition = "2021"
keywords = ["networking", "server", "prediction", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "sabi"
readme = "../README.md"
repository = "https://github.com/aceeri/sabi"
version = "0.3.0"

[lib]
path = "src/lib.rs"

[dependencies]
sabi_derive = {version = "0.3", path = "../sabi_derive"}

#bevy_rapier2d = {version = "0.16", features = ["serde-serialize"]}
bevy_rapier3d = {version = "0.16", features = ["serde-serialize"]}
bevy_renet = "0.0.5"
bincode = "1.3"
derive_more = "0.99"
fixed = {version = "1.11", features = ["serde", "std", "serde-str"]}
fxhash = "0.2.1"
igd = "0.12.0"
iyes_loopless = {version = "0.7.0", features = ["states"]}
lazy_static = "1.4"
my_internet_ip = "0.1.1"
rand = "0.8"
serde = "1"
smallvec = "1.7"
smolset = "1.3"
toml = "0.5"
vec-collections = "0.4"
wgpu-types = "0.13"
zstd = {version = "0.11", features = ["zdict_builder"]}

[dependencies.bevy]
default-features = false
version = "0.8.0"
#path = "../bevy"
