[package]
authors = ["aceeri <conmcclusk@gmail.com>"]
categories = ["network-programming", "game-development"]
description = "A client-server networking architecture for bevy."
edition = "2021"
keywords = ["networking", "server", "prediction", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "sabi"
readme = "../README.md"
repository = "https://github.com/aceeri/sabi"
version = "0.3.0"

[lib]
path = "src/lib.rs"

[features]
default = ["public"]
public = ["bevy_renet", "igd", "my_internet_ip", "sabi_derive", "zstd", "bincode"]

[dependencies.bevy]
default-features = false
version = "0.9.0"
#path = "../bevy"


[dependencies]
#bevy_renet = {version = "0.0.5", optional = true}
bevy_renet = {git = "https://github.com/lucaspoffo/renet", optional = true}
sabi_derive = {version = "0.3", path = "../sabi_derive", optional = true}
#bevy_rapier2d = {version = "0.16", features = ["serde-serialize"]}
bevy_rapier3d = {version = "0.18", features = ["serde-serialize"]}
iyes_loopless = {version = "0.7.0", features = ["states"]}




lazy_static = "1.4"
derive_more = "0.99"
fixed = {version = "1.11", features = ["serde", "std", "serde-str"]}
rand = "0.8"
fxhash = "0.2.1"
serde = "1"
toml = "0.5"
vec-collections = "0.4"
bincode = {version = "1.3", optional = true}
wgpu-types = "0.13"
zstd = {version = "0.11", features = ["zdict_builder"], optional = true}
my_internet_ip = {version = "0.1.1", optional = true}
igd = {version = "0.12.0", optional = true}
