
[package]
categories = ["game-engines", "networking"]
description = "Derive macros for replication features in sabi"
edition = "2021"
keywords = ["networking", "client-server architecture", "prediction", "games", "bevy"]
license = "MIT OR Apache-2.0"
name = "sabi_derive"
readme = "README.md"
repository = "https://github.com/aceeri/sabi"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
